# VulkanFramework_Lib

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt  vcpkg.json
VKFWLib/: constants.h  main.h  stbfix.cpp
VKFWLib/app/: ApplicationBase.cpp  ApplicationBase.h  Configuration.cpp  Configuration.h  VKWindow.cpp  VKWindow.h
VKFWLib/core/: aligned_vector.h  enum_flags.h  owned_ptr.h  serializationHelper.h  serialization_helper.cpp  serialization_helper.h  type_traits.h
VKFWLib/core/g3log/: filesink.cpp  filesink.h  filesinkhelper.inl  rotfilesink.cpp  rotfilesink.h
VKFWLib/core/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
VKFWLib/core/math/: intersections.h  math.h  primitives.h  transforms.h  triangles.h
VKFWLib/core/math/gte/: GteDCPQuery.h  GteDistSegmentSegment.h
VKFWLib/core/resources/: Resource.cpp  Resource.h  ResourceManager.h  ShaderManager.cpp  ShaderManager.h
VKFWLib/core/sceneobject/: SceneObjectManager.cpp
VKFWLib/core/sceneobject/component/: Component.h  ComponentManager.cpp
VKFWLib/gfx/: Material.cpp  Material.h  Texture2D.cpp  Texture2D.h
VKFWLib/gfx/camera/: Arcball.cpp  Arcball.h  ArcballCamera.cpp  ArcballCamera.h  CameraBase.cpp  CameraBase.h  FreeCamera.cpp  FreeCamera.h
VKFWLib/gfx/mesh/: AssImpScene.cpp  AssImpScene.h  Mesh.cpp  Mesh.h  SceneMeshNode.cpp  SubMesh.cpp  SubMesh.h
VKFWLib/gfx/meshes/: Animation.cpp  Animation.h  AssImpScene.cpp  AssImpScene.h  Mesh.cpp  Mesh.h  MeshInfo.cpp  MeshInfo.h  MeshRenderable.cpp  MeshRenderable.h  SceneMeshNode.cpp  SceneMeshNode.h  SubMesh.cpp  SubMesh.h  assimp_convert_helpers.h
VKFWLib/gfx/renderer/: ForwardMeshRenderer.cpp  ForwardMeshRenderer.h  MeshMaterialVertex.cpp  MeshMaterialVertex.h  RenderElement.h  RenderList.h  Renderable.cpp  Renderable.h
VKFWLib/gfx/vk/: Buffer.cpp  Buffer.h  BufferGroup.cpp  BufferGroup.h  CommandBuffers.cpp  CommandBuffers.h  ComputePipeline.cpp  ComputePipeline.h  DeviceBuffer.cpp  DeviceBuffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  HostBuffer.cpp  HostBuffer.h  LogicalDevice.cpp  LogicalDevice.h  QueuedDeviceTransfer.cpp  QueuedDeviceTransfer.h  Shader.cpp  Shader.h  Texture.h  UniformBufferObject.cpp  UniformBufferObject.h  VKRAIIWrapper.cpp  VKRAIIWrapper.h
VKFWLib/gfx/vk/buffers/: Buffer.cpp  Buffer.h  BufferGroup.cpp  BufferGroup.h  DeviceBuffer.cpp  DeviceBuffer.h  HostBuffer.cpp  HostBuffer.h
VKFWLib/gfx/vk/memory/: DeviceMemory.cpp  DeviceMemory.h  DeviceMemoryGroup.cpp  DeviceMemoryGroup.h  MemoryGroup.cpp  MemoryGroup.h
VKFWLib/gfx/vk/textures/: DeviceTexture.cpp  DeviceTexture.h  HostTexture.cpp  HostTexture.h  Texture.cpp  Texture.h
cmake/: CompileSpirvShader.cmake  CompilerWarnings.cmake  Conan.cmake  FindShaderc.cmake  ResourceFileList.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  shader_compiler.cmake
deprecated_code/components/: RenderComponent.h  TransformComponent.h
deprecated_code/renderer/: ForwardMeshRenderer.cpp  ForwardMeshRenderer.h  MeshMaterialVertex.cpp  Renderable.cpp  Renderable.h  Renderer.h
deprecated_code/sceneobject/: SceneObject.cpp  SceneObject.h  SceneObjectManager.h
deprecated_code/sceneobject/component/: Component.cpp  ComponentFamilyManager.cpp  ComponentFamilyManager.h  ComponentManager.h
include/vkfw_core/: constants.h  main.h
include/vkfw_core/app/: ApplicationBase.h  Configuration.h  VKWindow.h
include/vkfw_core/core/: aligned_vector.h  concepts.h  enum_flags.h  owned_ptr.h  serialization_helper.h  string_algorithms.h  type_traits.h
include/vkfw_core/core/math/: intersections.h  math.h  primitives.h  transforms.h  triangles.h
include/vkfw_core/core/resources/: Resource.h  ResourceManager.h  ShaderManager.h
include/vkfw_core/gfx/: Material.h  Texture2D.h
include/vkfw_glsl_preprocessor/: constants.h  shader_preprocess.h
resources/shader/: fullscreen.vert  shader_interface.h
resources/shader/materials/: material_host_interface.h
resources/shader/mesh/: mesh_host_interface.h
resources/shader/rt/: ray_tracing_host_interface.h
src/: CMakeLists.txt
src/vkfw_core/: CMakeLists.txt
src/vkfw_core/app/: ApplicationBase.cpp  Configuration.cpp  VKWindow.cpp
src/vkfw_core/core/: function_view.h  serialization_helper.cpp
src/vkfw_core/core/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/vkfw_core/core/resources/: Resource.cpp  ShaderManager.cpp
src/vkfw_core/core/spdlog/sinks/: filesink.cpp
src/vkfw_core/gfx/: Material.cpp  Texture2D.cpp
src/vkfw_core/gfx/camera/: Arcball.cpp  ArcballCamera.cpp  CameraBase.cpp  FreeCamera.cpp
src/vkfw_core/gfx/meshes/: Animation.cpp  AnimationState.cpp  AssImpScene.cpp  Mesh.cpp  MeshInfo.cpp  MeshRenderable.cpp  SceneMeshNode.cpp  SubMesh.cpp  animation_convert_helpers.h  assimp_convert_helpers.h
src/vkfw_core/gfx/renderer/: FullscreenQuad.cpp  MeshMaterialVertex.cpp
src/vkfw_core/gfx/vk/: CommandBuffers.cpp  ComputePipeline.cpp  Framebuffer.cpp  GraphicsPipeline.cpp  LogicalDevice.cpp  QueuedDeviceTransfer.cpp  Shader.cpp  UniformBufferObject.cpp
src/vkfw_core/gfx/vk/buffers/: Buffer.cpp  BufferGroup.cpp  DeviceBuffer.cpp  HostBuffer.cpp
src/vkfw_core/gfx/vk/memory/: DeviceMemory.cpp  DeviceMemoryGroup.cpp  MemoryGroup.cpp
src/vkfw_core/gfx/vk/pipeline/: ComputePipeline.cpp  DescriptorSetLayout.cpp  GraphicsPipeline.cpp  RayTracingPipeline.cpp
src/vkfw_core/gfx/vk/rt/: AccelerationStructure.cpp  AccelerationStructureGeometry.cpp  BottomLevelAccelerationStructure.cpp  TopLevelAccelerationStructure.cpp
src/vkfw_core/gfx/vk/textures/: DeviceTexture.cpp  HostTexture.cpp  Sampler.cpp  Texture.cpp
src/vkfw_core/gfx/vk/wrappers/: CommandBuffer.cpp  CommandPool.cpp  DescriptorSet.cpp  PipelineBarriers.cpp  Queue.cpp  RenderPass.cpp  ResourceReleaser.cpp  Sampler.cpp  VertexInputResources.cpp  VulkanSyncResources.cpp
src/vkfw_glsl_preprocessor/: CMakeLists.txt  main.cpp  shader_preprocess.cpp
test/: CMakeLists.txt
(+63 files in other folders)
